--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,9 @@
 :root {
     --couleur-primaire : #fc891e;
 }
+
+body {
+color: #fff;
+background-color:#6c6c6c;
+font-family: Fira Code,Monaco,Consolas,Ubuntu Mono,monospace;
+}
