--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,3 +7,7 @@ color: #fff;
 background-color:#6c6c6c;
 font-family: Fira Code,Monaco,Consolas,Ubuntu Mono,monospace;
 }
+
+h1 {
+color: #ff0000;
+}
