--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,8 +3,8 @@
 }
 
 body {
-color: #fff;
-background-color:#6c6c6c;
+color: rgb(255, 255, 255);
+background-color: rgb(25, 25, 25);
 font-family: Fira Code,Monaco,Consolas,Ubuntu Mono,monospace;
 }
 
